app home is added

--- a/partystore/src/main/js/src/App.css
+++ b/partystore/src/main/js/src/App.css
@@ -1,9 +1,9 @@
-.App {
+.Register-app {
   text-align: center;
   background-image: url("Party.jpg");
 }
 
-.App-header {
+.Register-app-header {
   background-color: #282c34;
   min-height: 90vh;
   margin-left: 15%;
