--- a/partystore/src/main/js/src/App.css
+++ b/partystore/src/main/js/src/App.css
@@ -11,18 +11,15 @@
   opacity: 0.9;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-inputs{
+input{
 border-radius: 30px;
 text-align: center;
 margin-right: 10px;
 height:25px;
-/*width:22%; */
 }
 
 
@@ -31,7 +28,6 @@ border-radius: 30px;
 text-align: center;
 margin-right: 10px;
 height:25px;
-/*width:15%; */
 }
 
 button{
@@ -39,7 +35,6 @@ border-radius: 30px;
 margin-right: 10px;
 height: 30px;
 width: 15%;
-/* width: 150px; */
 }
 
 h1{
